--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "test": "playwright test",
     "test:coverage": "nyc --reporter=json-summary --reporter=text playwright test",
-    "record": "npx playwright codegen http://localhost:5173"
+    "record": "npx playwright codegen http://localhost:5173",
+    "trace viewer": "npx playwright test --ui"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.1",
